# image_viewer

./: Cargo.toml  README.md  build.rs  install_desktop.sh  open_image.sh
.github/workflows/: release.yml
assets/: image_viewer.desktop
image_viewer/: Cargo.toml
src/: image_processing.rs  main.rs
